2002-09-06  Peteris Krisjanis <peteris.krisjanis@os.lv>

	* configure.in: Added Latvian (lv) to ALL_LINGUAS

2002-08-04  Havoc Pennington  <hp@redhat.com>

	* configure.in: 1.2.1

2002-07-12  Brian Cameron  <Brian.Cameron@sun.com>

	* gconf/gconfd.c
	Removed reference to gnome_segv2 since it was not used.

2002-07-11  Brian Cameron  <Brian.Cameron@sun.com>

	* gconf-2.0.pc.in
	* gconf.spec.in
	* gconf/Makefile.am
	* gconf/gconfd.c
	* gconf/gconf-internals
	Now install gconfd-2 and gconf-sanity-check-2 in libexec

2002-07-09  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconfd.c: (obtain_database): fix
	silly with addresses list.

2002-07-04  Havoc Pennington  <hp@pobox.com>

	* gconf/gconfd.c (logfile_read): close our FILE* when we're done.
	Reported by Michael.
	
2002-07-03  Yanko Kaneti <yaneti@declera.com>

	* configure.in: (ALL_LINGUAS) Added Bulgarian (bg).

2002-06-16  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf-sources.c (gconf_sources_recursive_unset): don't
	propagate nonexistent errors, fixes a warning.

Fri Jun 14 13:24:42 2002  HideToshi Tajima  <hidetoshi.tajima@sun.com>

	* gconf/gconfd.c: include <locale.h> for setlocale.

2002-06-11  Havoc Pennington  <hp@pobox.com>

	* configure.in: version 1.2.0

	* README, NEWS, AUTHORS: update

2002-06-02  Havoc Pennington  <hp@pobox.com>

	* gconf/gconftool.c: add --version argument, #79555, involves a
	help string but it should be OK if this string isn't translated.

	* gconf/gconf-client.c (gconf_client_get): add some
	g_return_if_fail, #74984
	(gconf_client_key_is_writable): handle NULL entry,
	#75503

	* gconf/gconfd.c (gconf_handle_segv): disable bug-buddy for now,
	too much recursion danger.

	* gconf/gconf-internals.c, gconf/gconfd.c: replace isspace() with
	g_ascii_isspace, bug #70945

	* gconf/gconf-value.c (gconf_value_new): init i18n here

	* gconf/gconf.c (gconf_engine_blank): init i18n here

	* gconf/gconftool.c (main): init i18n here, call textdomain
