@@ -1,3 +1,15 @@
+2002-09-09  jacob berkman  <jacob@ximian.com>
+
+	* gconf/GConf.idl:
+	* gconf/GConfX.idl:
+	* gconf/Makefile.am:
+	* gconf/gconf-database.h:
+	* gconf/gconf-internals.h:
+	* gconf/gconf.c:
+	* gconf/gconfd.c:
+	* gconf/gconfd.h: rename GConf.idl to GConfX.idl in order to build
+	on non-case-sensitive file systems
+
 2002-09-06  Peteris Krisjanis <peteris.krisjanis@os.lv>
 
 	* configure.in: Added Latvian (lv) to ALL_LINGUAS
